[package]
name = "loft-visualizer"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.24.0"
imgui = "=0.12.0"
imgui-wgpu = "0.25.0"
imgui-winit-support = "=0.13.0"
pollster = "=0.4.0"
wgpu = "=25.0.2"
winit = "=0.30.12"

glam = { workspace = true, features = ["bytemuck"] }
lofter.workspace = true
